--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,8 @@
 app.version=0.0.1
 
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+
 ###################################################################################
 # Properties for WebApi
 ###################################################################################
@@ -7,3 +10,9 @@ app.version=0.0.1
 server.url=https://bitzer-test.brandmaker.com
 server.username=djordje.gavrilovic
 server.password=QR5678-Test123
+
+###################################################################################
+# Properties for Custom Structures and Objects
+###################################################################################
+
+custom.structure.id=1073
