--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,8 @@ spring.application.name=QR Code Generator
 
 spring.profiles.active=dev
 
+spring.thymeleaf.cache=false
+spring.web.resources.static-locations=classpath:/static/
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+
 
