preparing for first deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.thymeleaf.cache=false
 spring.web.resources.static-locations=classpath:/static/
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 
+bitzer.home.url=https://www.bitzer.de/de/de/
+
 
