--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=QR Code Generator
 spring.profiles.active=dev
 
 spring.thymeleaf.cache=false
-spring.web.resources.static-locations=classpath:/static/
-spring.thymeleaf.prefix=file:src/main/resources/templates/
+#spring.web.resources.static-locations=classpath:/static/
+#spring.thymeleaf.prefix=file:src/main/resources/templates/
 
 bitzer.home.url=https://www.bitzer.de/de/de/
 
