--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.thymeleaf.cache=false
 
 bitzer.home.url=https://www.bitzer.de/de/de/
 
-server.servlet.context-path=/qr-codes
+#server.servlet.context-path=/qr-codes
 
 
