--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-app.version=0.0.1
+app.version=1.0.0
 
 ###################################################################################
 # Properties for WebApi
@@ -7,3 +7,9 @@ app.version=0.0.1
 server.url=https://www.bitzer-marketing-portal.com/
 server.username=qr.code
 server.password=g!SJKDkG@?NoNB9?R@FLEg9SMYD3
+
+###################################################################################
+# Properties for Custom Structures and Objects
+###################################################################################
+
+custom.structure.id=1173
