--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=QR Code Generator
 
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 spring.thymeleaf.cache=false
 #spring.web.resources.static-locations=classpath:/static/
