--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,10 @@
-app.version=1.0.2
+app.version=1.0.3
 
 ###################################################################################
 # Properties for WebApi
 ###################################################################################
 
-server.url=https://www.bitzer-marketing-portal.com/
+server.url=https://www.bitzer-marketing-portal.com
 server.username=qr.code
 server.password=g!SJKDkG@?NoNB9?R@FLEg9SMYD3
 
